--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://0.0.0.0:3000",
   "scripts": {
     "start": "react-scripts start --host 0.0.0.0:3000",
     "build": "react-scripts build",
