--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://0.0.0.0:3000",
   "scripts": {
-    "start": "react-scripts start --host 0.0.0.0:3000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
